@@ -9,7 +9,7 @@
 
 ## To Run
 
-[Add a brief description of which .java file to run, and what vm arguments are needed]
+[Run CourseReviewsApplication with the following VM Arguments: --module-path [Path to JavaFX folder] --add-modules javafx.controls,javafx.fxml]
 
 ## Contributions
 
